# boxlab

./: .coveragerc  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  publish.yml  test.yml
boxlab/: __init__.py  __main__.py  exceptions.py
boxlab/annotator/: __init__.py  canvas.py  controller.py  dialogs.py  panels.py  types.py  workspace.py
boxlab/annotator/streamlit/: audit.py
boxlab/cli/: __init__.py  annotator.py
boxlab/cli/dataset/: __init__.py  convert.py  info.py  merge.py  visualize.py
boxlab/cli/dataset/helper/: __init__.py  visualizer.py
boxlab/cli/helper/: ansi.py  display.py
boxlab/dataset/: __init__.py  exporter.py  io.py  loader.py  torchadapter.py  types.py  utils.py
boxlab/dataset/plugins/: __init__.py  coco.py  naming.py  registry.py  yolo.py
docs/: changelog.md  index.md  license.md
docs/guides/: advanced-usage.md  cli-annotator.md  cli-dataset.md  cli-overview.md  index.md  installation.md  quick-start.md
docs/reference/: annotator.md  exceptions.md  index.md
docs/reference/dataset/: index.md  io.md  torchadapter.md  types.md
docs/reference/dataset/plugins/: coco.md  index.md  registry.md  yolo.md
scripts/: bump.sh  format.sh  lint.sh
scripts/tools/: check-poetry.sh  install-poetry.sh
tests/: conftest.py  test_version.py
tests/annotator/: test_controller.py
tests/dataset/: test_bbox.py  test_dataset.py
tests/plugins/: test_coco.py  test_registry.py  test_yolo.py
